--- a/index.html
+++ b/index.html
@@ -2,22 +2,98 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Marcos E. Herrera">
-    <meta name="keywords" content="Maquinarias viales, Viazzo">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Marcos E. Herrera" />
+    <meta name="keywords" content="Maquinarias viales, Viazzo" />
     <title>Principal</title>
+    <link rel="shortcut icon" href="img/Brand/tractor.ico" type="image/x-icon">
     <!-- Estilos de Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- Fontawesome icons -->
+    <script src="https://kit.fontawesome.com/01e0ad8e45.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="img/Brand/logo-blanco.png" alt="Logo de la página" class="logoSize">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Galeria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                        <li>
+                            <button type="button" class="btn btn-outline-secondary ms-4 btn-radious">Iniciar sesión</button>
+                        </li>
+                        <li>
+                            <button type="button" class="btn btn-outline-secondary ms-4 btn-radious">Registrarse</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer class="bg-dark">
+        <section class="container">
+            <div class="row">
+                <!--Logo / Imagen -->
+                <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
+                    <img src="img/Brand/logo-blanco.png" alt="Logo de la página" class="footerLogoSize">
+                </div>
+
+                <!-- Links hacia inicio/galeria/nosotros/contacto -->
+                <div class="col-sm-12 col-md-4 col-lg-4 mt-3 d-flex align-items-center justify-content-center">
+                    <ul class="py-1 mb-1">
+                        <li class="py-1"><a href="#" class="footerLink">Inicio</a></li>
+                        <li class="py-1"><a href="#" class="footerLink">Galeria</a></li>
+                        <li class="py-1"><a href="#" class="footerLink">Nosotros</a></li>
+                        <li class="py-1"><a href="#" class="footerLink">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales / acá se pueden linkear con la página de error404.html -->
+                <div class="row col-sm-12 col-md-4 col-lg-4 mt-3">
+                    <ul class="d-inline-flex justify-content-between align-self-center">
+                        <li>
+                            <a href="#" class="text-light"><i class="fab fa-facebook fa-3x mr-2"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="text-light"><i class="fab fa-twitter fa-3x mr-2"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="text-light"><i class="fab fa-instagram fa-3x mr-2"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="text-light text-center">
+                <hr>
+                <p>&copy Todos los derechos reservados</p>
+                <br>
+            </div>
+        </section>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
