--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -12,7 +12,7 @@
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <!-- Fontawesome icons -->
     <script src="https://kit.fontawesome.com/01e0ad8e45.js" crossorigin="anonymous"></script>
 </head>
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/Brand/logo-blanco.png" alt="Logo de la página" class="logoSize" />
+                    <img src="../img/Brand/logo-blanco.png" alt="Logo de la página" class="logoSize" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,17 +30,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="html/galeria.html">Galeria</a>
+                <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="html/nosotros.html">Nosotros</a>
+                            <a class="nav-link active" href="#">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="html/contacto.html">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li>
                             <button type="button" class="btn btn-outline-secondary ms-4 btn-radious" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -198,7 +198,7 @@
           <!--Logo / Imagen -->
           <div class="col-sm-12 col-md-4 col-lg-4 mt-3">
             <img
-              src="img/Brand/logo-blanco.png"
+              src="../img/Brand/logo-blanco.png"
               alt="Logo de la página"
               class="footerLogoSize"
             />
@@ -215,10 +215,10 @@
             "
           >
             <ul class="py-1 mb-1">
-              <li class="py-1"><a href="index.html" class="footerLink">Inicio</a></li>
-              <li class="py-1"><a href="html/galeria.html" class="footerLink">Galeria</a></li>
-              <li class="py-1"><a href="html/nosotros.html" class="footerLink">Nosotros</a></li>
-              <li class="py-1"><a href="html/contacto.html" class="footerLink">Contacto</a></li>
+              <li class="py-1"><a href="../index.html" class="footerLink">Inicio</a></li>
+              <li class="py-1"><a href="galeria.html" class="footerLink">Galeria</a></li>
+              <li class="py-1"><a href="nosotros.html" class="footerLink">Nosotros</a></li>
+              <li class="py-1"><a href="contacto.html" class="footerLink">Contacto</a></li>
             </ul>
           </div>
 
@@ -226,17 +226,17 @@
           <div class="row col-sm-12 col-md-4 col-lg-4 mt-3">
             <ul class="d-inline-flex justify-content-between align-self-center">
               <li>
-                <a href="html/error404.html" class="text-light"
+                <a href="error404.html" class="text-light"
                   ><i class="fab fa-facebook fa-3x mr-2"></i
                 ></a>
               </li>
               <li>
-                <a href="html/error404.html" class="text-light"
+                <a href="error404.html" class="text-light"
                   ><i class="fab fa-twitter fa-3x mr-2"></i
                 ></a>
               </li>
               <li>
-                <a href="html/error404.html" class="text-light"
+                <a href="error404.html" class="text-light"
                   ><i class="fab fa-instagram fa-3x mr-2"></i
                 ></a>
               </li>
