Se agrego la pagina de error404.html.

--- a/html/error404.html
+++ b/html/error404.html
@@ -57,7 +57,14 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="errorMain">
+        <section class="container py-4 align-self-center">
+            <figure class="figure">
+                <img src="../img/error-404.svg" alt="Imagen de error.Página no encontrada" class="figure-img img-fluid rounded">
+                <figcaption class="figure-caption text-light text-center fs-1">Página no encontrada.</figcaption>-
+            </figure>
+        </section>
+
         <!-- Modal - Iniciar sesión -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
